# ruggine

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
apps/ruggine-grpc-demo/: Cargo.toml  Dockerfile  README.md
apps/ruggine-grpc-demo/src/: main.rs
apps/ruggine-ulid/: CHANGELOG.md  Cargo.toml  README.md
apps/ruggine-ulid/src/: lib.rs  main.rs  utils.rs
apps/ruggine-ulid/tests/: cmd.rs
docs/dev/: FAQ.md
docs/dev/k8s/: links.md  microk8s.md  tools.md
ruggine-app/: Cargo.toml
ruggine-app/src/: lib.rs  service.rs
ruggine-async/: Cargo.toml
ruggine-async/benches/: executor_bench.rs
ruggine-async/src/: executor.rs  function.rs  lib.rs  timer.rs
ruggine-concurrency/: Cargo.toml
ruggine-concurrency/benches/: executor_bench.rs
ruggine-concurrency/examples/: service.rs
ruggine-concurrency/src/: executor.rs  function.rs  lib.rs  service.rs
ruggine-errors/: Cargo.toml
ruggine-errors/src/: lib.rs
ruggine-protos-core/: Cargo.toml  README.md  build.rs
ruggine-protos-core/features/: serde.feature
ruggine-protos-core/protos/messages/: app_v1.proto  time_v1.proto  ulid.proto  ulid_v1.proto
ruggine-protos-core/protos/services/: app_v1.proto
ruggine-protos-core/src/: lib.rs  messages.rs  protos.rs
ruggine-protos-core/src/messages/: ulid.rs
ruggine-protos-core/src/protos/: messages.rs  services.rs
ruggine-protos-core/src/protos/messages/: app.rs  time.rs  ulid.rs
ruggine-protos-core/src/protos/messages/app/: v1.rs
ruggine-protos-core/src/protos/messages/time/: v1.rs
ruggine-protos-core/src/protos/messages/ulid/: v1.rs
ruggine-protos-core/src/protos/services/app/: v1.rs
ruggine-protos-core/tests/: grpc_foo.rs
ruggine-protos-core/tests/protos/: foo.proto
ruggine-sandbox/: Cargo.toml  build.rs
ruggine-sandbox/benches/: tower_grpc_bench.rs
ruggine-sandbox/benches/protos/: foo.proto
ruggine-sandbox/src/: lib.rs
ruggine-sandbox/tests/: futures_test.rs  grpc_foo.rs
ruggine-service/: Cargo.toml  README.md
ruggine-service/src/: lib.rs
sandbox/ruggine-grpc-app-service-server/: Cargo.toml  Dockerfile
sandbox/ruggine-grpc-app-service-server/k8s/base/: kustomization.yaml
sandbox/ruggine-grpc-app-service-server/k8s/proxy/: kustomization.yaml
sandbox/ruggine-grpc-app-service-server/k8s/server/: deployment.yaml  kustomization.yaml
sandbox/ruggine-grpc-app-service-server/src/: main.rs
sandbox/ruggine-sandbox/: Cargo.toml  build.rs
sandbox/ruggine-sandbox/benches/: tower_grpc_bench.rs
sandbox/ruggine-sandbox/k8s/policies/: privileged.yaml
sandbox/ruggine-sandbox/k8s/weave/: rbac_privileged.yaml  scope.yaml
sandbox/ruggine-sandbox/src/: lib.rs
sandbox/ruggine-sandbox/tests/: futures_test.rs  grpc_foo.rs
sandbox/ruggine-sandbox/tests/protos/: foo.proto
services/ruggine-app-service/: Cargo.toml  README.md  build.rs
services/ruggine-app-service/protos/services/: app_v1.proto
services/ruggine-app-service/src/: lib.rs  protos.rs
services/ruggine-app-service/src/protos/services/: app.rs
services/ruggine-app-service/src/protos/services/app/: v1.rs
