[workspace]
members = ["ruggine-*", "apps/ruggine-*", "services/ruggine-*", "sandbox/ruggine-*"]

[profile.release]
#Link Time Optimization usually reduces size of binaries and static libraries.
lto = true

[profile.test]
# debug is temporarily disabled because `cargo +nightly test` is failing to compile
# https://github.com/rust-lang/rust/issues/58888
debug = false

[profile.dev]
# debug is temporarily disabled because `cargo +nightly test` is failing to compile
# https://github.com/rust-lang/rust/issues/58888
debug = false