[package]
name = "ruggine_async"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
edition = "2018"
description = "Provides support for async execution integrated with futures"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/ruggine"
homepage = "https://github.com/oysterpack/ruggine/tree/master/ruggine-async"
readme = "README.md"
keywords = ["futures", "async", "parallel"]
categories = ["concurrency"]

[dependencies]
ruggine_errors = {version = "0.1", path = "../ruggine-errors"}
futures-preview = {version = "0.3.0-alpha.14", features = ["compat"] }
lazy_static = "1.3.0"
parking_lot = {version ="0.7.1", features = ["nightly"] }
hashbrown = {version = "0.1.8", features = ["serde"]}
log = "0.4.6"
tokio-timer = {version = "0.2.10", optional = true}
failure = "0.1.5"

[dev-dependencies]
version-sync = "0.7.0"
criterion = "0.2.10"
proptest = "0.9.1"
pretty_assertions = "0.6.1"
env_logger = "0.6.1"
rusty_ulid = "0.8.0"
tokio = "0.1.18"

[features]
default = ["timer"]
timer = ["tokio-timer"]
io-compat = ["futures-preview/io-compat"]

[[bench]]
name = "executor_bench"
harness = false
