[package]
name = "ruggine_concurrency"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
edition = "2018"
description = "Provides support for async execution integrated with futures"
license = "MIT/Apache-2.0"
repository = "https://github.com/oysterpack/ruggine"
homepage = "https://github.com/oysterpack/ruggine/tree/master/ruggine-protos-core"
readme = "README.md"
keywords = ["futures","async", "parallel"]
categories = ["concurrency"]

[dependencies]
futures-preview = {version = "0.3.0-alpha.13", features = ["compat"] }
prometheus = {version = "0.5.0", features = ["nightly", "gen", "push", "process"] }
num_cpus = "1.10.0"
failure = "0.1.5"
lazy_static = "1.3.0"
parking_lot = {version ="0.7.1", features = ["nightly"] }
hashbrown = {version = "0.1.8", features = ["serde"]}

[dev-dependencies]
version-sync = "0.7.0"
criterion = "0.2.10"
cucumber_rust = "0.5.1"
fail = "0.2.1"
proptest = "0.9.1"
pretty_assertions = "0.6.1"
