[package]
name = "ruggine_protos_core"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
edition = "2018"

[dependencies]
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc"}
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
prost = "0.5.0"
prost-types = "0.5.0"
bytes = "0.4.12"

tokio = "0.1"
futures = "0.1"

rusty_ulid = "0.8.0"

[dev-dependencies]
version-sync = "0.7.0"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc"}
prost-build = "0.5.0"
