[package]
name = "ruggine-sandbox"
version = "0.1.0"
authors = ["Alfio Zappala <oysterpack.inc@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ruggine_concurrency = {path = "../ruggine-concurrency", version = "0.1"}

prost = "0.5.0"
prost-types = "0.5.0"

tower-grpc = { git = "https://github.com/tower-rs/tower-grpc"}
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower = {git = "https://github.com/tower-rs/tower"}
tower-add-origin = { git = "https://github.com/tower-rs/tower-http" }

bytes = "0.4.12"
log = "0.4.6"

tokio = "0.1"
tokio-buf = "0.1.0"
futures = "0.1"

rusty_ulid = "0.8.0"
chrono = "0.4.6"
serde = { version = "1.0", optional = true, features = ["derive"] }
parking_lot = {version ="0.7.1", features = ["nightly"] }

[dev-dependencies]
version-sync = "0.7.0"
env_logger = "0.6.1"
criterion = "0.2.10"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc"}
prost-build = "0.5.0"

[[bench]]
name = "tower_grpc_bench"
harness = false
